started writing tests for at cmd parser

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,12 @@ idf_component_register(
 	SRCS
 	"test_main.c"
 	"test_dummy.c"
+	"test_at_cmd_parser.c"
 	INCLUDE_DIRS
 	"."
 	REQUIRES
 	unity
-	freertos)
+	freertos
+	bg95_driver
+)
+
