--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ idf_component_register(
 	"test_main.c"
 	"test_dummy.c"
 	"test_at_cmd_parser.c"
+	"test_mock_uart_interface.c"
 	INCLUDE_DIRS
 	"."
 	REQUIRES
