started writing tests for new at cmd handler

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ idf_component_register(
 	"test_dummy.c"
 	"test_at_cmd_parser.c"
 	"test_mock_uart_interface.c"
+	"test_at_cmd_handler.c"
 	INCLUDE_DIRS
 	"."
 	REQUIRES
