added tests for qmtcfg - AT cmd

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,7 @@ idf_component_register(
 	"test_at_cmd_csq.c"
 	"test_at_cmd_cops.c"
 	"test_at_cmd_cgdcont.c"
+	"test_at_cmd_qmtcfg.c"
 	INCLUDE_DIRS
 	"."
 	REQUIRES
